objects/ASI_CRM_Competitor_Contract__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Investment_per_CR12_eq_btl__c</fullName>
        <formula>if (((YEAR(ASI_CRM_PO_End__c) - YEAR(ASI_CRM_PO_Start__c))*12 + (MONTH( ASI_CRM_PO_End__c )-MONTH( ASI_CRM_PO_Start__c )+1)) * ASI_CRM_Monthly_Volume_CR12__c &gt; 0 ,(ASI_CRM_Total_Amount__c /( ASI_CRM_Monthly_Volume_CR12__c  * ((YEAR(ASI_CRM_PO_End__c) - YEAR(ASI_CRM_PO_Start__c))*12 + (MONTH( ASI_CRM_PO_End__c )-MONTH( ASI_CRM_PO_Start__c )+1)))), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investment per CR12 eq btl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>人马君度</fullName>
                </value>
                <value>
                    <fullName>MHD</fullName>
                </value>
                <value>
                    <fullName>百富门</fullName>
                </value>
                <value>
                    <fullName>百加得</fullName>
                </value>
                <value>
                    <fullName>帝亚吉欧</fullName>
                </value>
                <value>
                    <fullName>寰盛</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Monthly_Volume_CR12__c</fullName>
        <label>Monthly Volume (CR12)</label>
        <summarizedField>ASI_CRM_Competitor_Contract_Item__c.ASI_CRM_Volume_CR12WF__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Competitor_Contract_Item__c.ASI_CRM_Competitor_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PO_End__c</fullName>
        <label>PO End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PO_Start__c</fullName>
        <label>PO Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS/Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Competitor Contracts</relationshipLabel>
        <relationshipName>ASI_CRM_Competitor_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Competitor Contract</label>
    <listViews>
        <fullName>ASI_CRM_CN_Competitor_Contracts</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_WS_Outlet__c</columns>
        <columns>ASI_CRM_Manufacturer__c</columns>
        <columns>ASI_CRM_PO_Start__c</columns>
        <columns>ASI_CRM_PO_End__c</columns>
        <columns>ASI_CRM_Total_Amount__c</columns>
        <columns>ASI_CRM_Investment_per_CR12_eq_btl__c</columns>
        <columns>ASI_CRM_Remarks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Competitor_Contract__c.ASI_CRM_CN_Competitor_Contract</value>
        </filters>
        <label>CN Competitor Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_WS_Outlet__c</columns>
        <columns>ASI_CRM_Manufacturer__c</columns>
        <columns>ASI_CRM_PO_Start__c</columns>
        <columns>ASI_CRM_PO_End__c</columns>
        <columns>ASI_CRM_Total_Amount__c</columns>
        <columns>ASI_CRM_Investment_per_CR12_eq_btl__c</columns>
        <columns>ASI_CRM_Remarks__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Contracts</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Competitor_Contract</fullName>
        <active>true</active>
        <label>CN Competitor Contract</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>